<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_feedback_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/iv_cancel"
            android:padding="10dp"
            android:text="@string/feedback_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

    </RelativeLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1.3dip"
        android:layout_below="@+id/layout_top"
        android:background="@color/line_gray" />

    <RelativeLayout
        android:id="@+id/layout_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line">

        <TextView
            android:id="@+id/tv_rate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/rating_header"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_rate_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_rate_title"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_btn"
            android:padding="10dp"
            android:text="@string/rate_now"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_tilte_suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_middle"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/how_can_we_improve"
        android:textAlignment="center"
        android:textColor="@color/text_gray"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_give_suggestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tilte_suggestion"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/dots_background"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/give_suggestion"
        android:textColor="@color/light_blue_text"
        android:textSize="16sp"
        android:textStyle="bold"

        />

    </RelativeLayout>
</RelativeLayout>