<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">
    <LinearLayout
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/arrow_back_white" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/top_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/back_btn"
        android:background="@drawable/logo_customer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_logo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_message"
                android:textColor="#ffffff"
                android:textSize="18sp"

                />
        </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColorHint="#ffffff"
              >

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bottom_border"
                    android:gravity="left"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="@android:color/white"
                    android:textCursorDrawable="@drawable/edit_text_cursor_color" />
            </android.support.design.widget.TextInputLayout>






        <TextView
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@drawable/button_color"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18dp" />




    </LinearLayout>

</RelativeLayout>
