<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:src="@drawable/arrow_back_white"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_title"
        android:background="@drawable/contact_us" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="5dp"
        android:singleLine="true"
        android:layout_below="@+id/iv_back"
        android:text="@string/contact_us"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/imageView2"
>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_bottom_border"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:textColorHint="@color/line_gray"
                android:textCursorDrawable="@drawable/edit_text_cursor_color" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_email"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_bottom_border"
                android:hint="@string/email_contact_us"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:textColorHint="@color/line_gray"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:textCursorDrawable="@drawable/edit_text_cursor_color" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_bottom_border"
                android:hint="@string/subject"
                android:inputType="textEmailSubject"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:textColorHint="@color/line_gray"
                android:drawableLeft="@drawable/ic_email_subject"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:textCursorDrawable="@drawable/edit_text_cursor_color" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_bottom_border"
                android:hint="Type Your Query Here !"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/line_gray"
                android:drawableLeft="@drawable/ic_email_content"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:textCursorDrawable="@drawable/edit_text_cursor_color" />


        </LinearLayout>
        <Button
            android:id="@+id/button_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/selector_layout_color"
            android:gravity="center"
            android:padding="15dp"
            android:text="Email Us "
            android:textAllCaps="false"
            android:textColor="#ffffff" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_main"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">




        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginTop="5dp"
            android:background="@color/line_gray"
            android:visibility="visible"></View>

        <TextView
            android:id="@+id/title_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/address"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_below="@+id/view_line"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:maxLines="3"
            android:padding="5dp"
            android:text="@string/contact_us_address"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
           android:layout_below="@+id/title_address" />
    </RelativeLayout>


    </RelativeLayout>
</ScrollView>
</RelativeLayout>