<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >



    <LinearLayout
        android:id="@+id/contactus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/ic_contactus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/contact"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ic_contactus" />

    </RelativeLayout>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/contactus"
        android:id="@+id/line_one"
        android:background="@color/line_gray"
        />
    <LinearLayout
        android:id="@+id/termsofuse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_below="@+id/line_one">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/termsandcondtion"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/terms_conditions" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:text="@string/terms_conditions"
                android:layout_toRightOf="@+id/termsandcondtion"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </RelativeLayout>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/termsofuse"
        android:id="@+id/line_two"
        android:background="@color/line_gray"
        />
    <LinearLayout
        android:id="@+id/faqs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_below="@+id/line_two"
        android:layout_alignParentStart="true"
        android:visibility="gone">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_faq"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/faq" />
            <!--kjzxzxzxj-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/ic_faq"
                android:text="@string/faq"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/faqs"
        android:id="@+id/line_three"
        android:background="@color/line_gray"
        />

    <LinearLayout
    android:id="@+id/feedback"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/line_three"
    android:background="@color/white"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_feedback"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/feedback" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/ic_feedback"
            android:text="@string/feedback"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/feedback"
        android:background="@color/line_gray"
        />
</RelativeLayout>



